# mimic-sepsis-benchmark

./: .gitignore  README.md  evaluate.py  explore_data.ipynb  preprocess_all.py  pyproject.toml  requirements.txt  run_dki_evals_tmux.sh  run_full_evaluation.sh  train.py  umls_exploration.ipynb
baselines_simple/: __init__.py  simple.py
configs/: config.yaml
docs/: downstream_results.tex
documentation/: New  STRUCTURE.md  architectural_evolution_report.md  baselines_report.md  dataset_sota_report.tex  graph_structure.html  kgi_saits_architecture.tex  report.tex  report.tex.old  results_sepsis_benchmark.tex  sepsis_full_data_report.md  sepsis_guide.md  training_configuration_report.md
graph/: check_pickle.py  debug_bp.py  extract_metapaths.py  generate_embeddings.py  prune_graph.py  relational_prior.py  visualize_graph.py
metrics/: __init__.py  imputation.py
models/: __init__.py
notebooks/: test.ipynb  umls_exploration.ipynb
paper_clean/: main.tex
results/: README.md  REPORT_TEMPLATE.md  advanced_eval_brits.json  advanced_eval_brits_dynamic.json  advanced_eval_mrnn.json  advanced_eval_mrnn_dynamic.json  advanced_eval_saits.json  advanced_eval_saits_dynamic.json  checkpoints_inventory.csv  comparison_saits_sssd.md  consolidated_benchmark.md  evaluation_results.txt  evaluation_results_full.txt  evaluation_saits_2026-02-16.md  fast_eval_brits.json  fast_eval_mrnn.json  fast_eval_saits.json  final_evaluation_results.txt  global_block_handpicked_L10_N2.csv  global_block_handpicked_L10_N2_results_subset.csv  global_brits_handpicked_random_p0.3.csv  (+131 more)
(+196 files in other folders)
